Fix spacing on header

--- a/common/common.scss
+++ b/common/common.scss
@@ -36,7 +36,7 @@
 
 #header #nav ul.menu li {
     width: auto;
-    height: 80px;
+    // height: 80px;
     float: left;
 }
 
@@ -70,7 +70,7 @@
 
 #header #nav ul.menu li {
     width: auto;
-    height: 80px;
+    // height: 80px;
     float: left;
 }
 
